test/tests/operators/from_tcp/error_tls_missing_certfile.txt
error: `tls.keyfile` is required when `tls.certfile` is set
 --> tests/operators/from_tcp/error_tls_missing_certfile.tql:6:14
  |
6 |          tls={certfile: "tests/operators/from_tcp/test.yaml"} { read_lines }
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = hint: set both `tls.certfile` and `tls.keyfile`
